# pool-controller-code

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  OTA_UPDATE.md  PROTOCOL.md  README.md  changelog.md  check_byte_relationship.py  checkdata.py  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
main/: CMakeLists.txt  bus.c  bus.h  config.h  device_serial.c  device_serial.h  dns_server.c  dns_server.h  idf_component.yml  led_helper.c  led_helper.h  main.c  message_decoder.c  message_decoder.h  mqtt_commands.c  mqtt_commands.h  mqtt_discovery.c  mqtt_discovery.h  mqtt_poolclient.c  mqtt_poolclient.h  mqtt_publish.c  mqtt_publish.h  pool_state.h  register_requester.c  register_requester.h  secrets.h.example  tcp_bridge.c  tcp_bridge.h  web_handlers.c  web_handlers.h  wifi_provisioning.c  wifi_provisioning.h
main/static/: oat.min.css
test/: README.md  esp_err.h  esp_log.h  mqtt_poolclient.h  run_tests.sh  test_commands  test_decoder  test_message_decoder.c  test_mqtt_commands.c
test/driver/: uart.h
test/freertos/: FreeRTOS.h  semphr.h
