idf_component_register(
    SRCS
        "main.c"
        "led_helper.c"
        "wifi_provisioning.c"
        "mqtt_poolclient.c"
        "mqtt_publish.c"
        "mqtt_discovery.c"
        "mqtt_commands.c"
        "web_handlers.c"
        "tcp_bridge.c"
        "message_decoder.c"
    INCLUDE_DIRS
         "."
    REQUIRES
        esp_app_format
        app_update
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        nvs_flash
        driver
        mqtt
)